# LaxStell

./: .dockerignore  .gitignore  .gitmodules  BRIDGE_DEPLOYMENT.md  BRIDGE_SPEC.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  SHARED.md  SPEC.md  SUBMISSION.md  TOOLCHAIN.md  docker-compose.yml  env.sh  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
bridge/deploy/: fetch-committee.mjs  seed-meta.json
bridge/l1/: .gitignore  README.md  foundry.toml
bridge/l1/script/: Deploy.s.sol
bridge/l1/src/: LaxStellBridgeL1.sol
bridge/l1/test/: LaxStellBridgeL1.t.sol
bridge/relayer/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
bridge/relayer/src/: beacon.ts  config.ts  inclusion.ts  index.ts  l1.ts  lightclient.ts  scval.ts  signal.ts  soroban.ts  types.ts
bridge/relayer/test/: beacon.test.ts  bls.test.ts  fixtures.ts  inclusion.test.ts  l1.test.ts  lightclient.test.ts  scval.test.ts  signal.test.ts
circuits/: README.md
circuits/artifacts/: .gitignore
circuits/artifacts/cancel_order/: proof  public_inputs  public_inputs.json  vk
circuits/artifacts/match_orders/: proof  public_inputs  public_inputs.json  vk
circuits/artifacts/place_order/: proof  public_inputs  public_inputs.json  vk
circuits/artifacts/transfer/: proof  public_inputs  public_inputs.json  vk
circuits/artifacts/withdraw/: proof  public_inputs  public_inputs.json  vk
circuits/noir/: build_all.sh
circuits/noir/cancel_order/: Nargo.toml  Prover.toml
circuits/noir/lax_stell_lib/: Nargo.toml
circuits/noir/match_orders/: Nargo.toml  Prover.toml
circuits/noir/place_order/: Nargo.toml  Prover.toml
circuits/noir/transfer/: Nargo.toml  Prover.toml
circuits/noir/withdraw/: Nargo.toml  Prover.toml
contracts/: Cargo.toml
contracts/bridge-mpt/: Cargo.toml
contracts/bridge-mpt/src/: lib.rs  mpt.rs  rlp.rs  test.rs  vectors.rs
contracts/eth-light-client/: Cargo.toml  README.md
contracts/eth-light-client/scripts/: gen_vector.mjs
contracts/eth-light-client/src/: lib.rs  ssz.rs  test.rs  test_vectors.rs  types.rs  verify.rs
contracts/eth-signal-client/: Cargo.toml
contracts/eth-signal-client/src/: lib.rs  ssz.rs  test.rs  types.rs
contracts/faucet-token/: Cargo.toml
contracts/faucet-token/src/: lib.rs
contracts/lax-stell-bridge/: Cargo.toml
contracts/lax-stell-bridge/src/: lib.rs  test.rs  types.rs
contracts/lax-stell-pool/: Cargo.toml
contracts/lax-stell-pool/src/: lib.rs  merkle.rs  test.rs  types.rs
deploy/: Caddyfile  README.md  matcher.env.example
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/circuits/: cancel_order.json  place_order.json  transfer.json  withdraw.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Act.tsx  AppLayout.tsx  BrandCanvas.tsx  BrandIcons.tsx  Bridge.tsx  ConnectWallet.tsx  DitherFluid.tsx  Faucet.tsx  FluidVolume.tsx  Landing.tsx  Pay.tsx  PriceChart.tsx  ProofProgress.tsx  ProvenLedger.tsx  Receive.tsx  ScrambleCycle.tsx  ScrambleNumber.tsx  Sheet.tsx  StoryShielded.tsx  Swap.tsx  ThemeToggle.tsx  ui.tsx
frontend/src/hooks/: useEvmWallet.ts  useLaxStell.tsx  usePriceQuote.ts  useProofFlow.ts  useReveal.tsx  useSubmit.ts  useTheme.ts  useWallet.tsx
frontend/src/lib/: bridge.ts  config.ts  cx.ts  faucet.ts  format.ts  indexer-service.ts  indexer.ts  (+12 more)
matcher/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
matcher/src/: engine.ts  index.ts  memo.ts  prover.ts  submitter.ts  types.ts
matcher/test/: engine.test.ts  memo.test.ts  prover.test.ts  submitter.test.ts
scripts/: deploy.sh  e2e.sh
sdk/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/src/: constants.ts  index.ts  match.ts  merkle.ts  note-crypto.ts  note.ts  order.ts  poseidon.ts  prover.ts  stellar.ts  types.ts  wallet.ts
sdk/test/: commitments.golden.json  index.test.ts  match.test.ts  merkle.golden.json  merkle.test.ts  note.test.ts  order.test.ts  poseidon.golden.json  poseidon.test.ts  prover.test.ts  stellar.test.ts  wallet.test.ts
(+14 files in other folders)
