[workspace]
resolver = "2"
members = ["lax-stell-pool", "bridge-mpt", "lax-stell-bridge", "faucet-token"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
