# Standalone package (own [workspace] table) so it is NOT pulled into the
# lax-stell-pool workspace at ../Cargo.toml — same convention as eth-light-client,
# which this contract supersedes.
[package]
name = "eth-signal-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Ethereum finality light client on Soroban via Boundless 'The Signal' (RISC Zero zkVM proof), replacing the native BLS sync-committee client"

[workspace]

[dependencies]
soroban-sdk = { version = "26.0.1", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils", "alloc"] }
hex = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
